--- a/index.html
+++ b/index.html
@@ -34,26 +34,32 @@
                     <ul class="nav">
                         <li class="active"><a href="index.html">Home</a></li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">MENU ITEM 1<i class="icon-angle-down"></i></a>
+                            <a href="pet_insurance_101.html" class="dropdown-toggle" data-toggle="dropdown">PET INSURANCE 101 <i class="icon-angle-down"></i></a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">MENU SUBITEM 1</a></li>
-                                <li><a href="#">MENU SUBITEM 2</a></li>
+                                <li><a href="pet_insurance_101.html">HOW PET INSURANCE WORKS</a></li>
+                                <li><a href="#">IS PET INSURANCE WORTH IT?</a></li>
+                                <li><a href="#">PET INSURANCE COVERAGE CHOICES</a></li>
+                                <li><a href="#">PET INSURANCE COST FACTORS</a></li>
+                                
                             </ul>
                         </li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">MENU ITEM 2<i class="icon-angle-down"></i></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">CHOOSE RIGHT PET INSURANCE <i class="icon-angle-down"></i></a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">MENU SUBITEM 1</a></li>
-                                <li><a href="#">MENU SUBITEM 2</a></li>
+                                <li><a href="#">BEST PET INSURANCE FOR YOUR DOG </a></li>
+                                <li><a href="#">BEST PET INSURANCE FOR YOUR CAT </a></li>
+                                <li><a href="#">COST-BENEFITS ANALYSIS</a></li>
+                                <li><a href="#">PEACE OF MIND </a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">MENU ITEM 3<i class="icon-angle-down"></i></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">GOLDEN RETRIEVER <i class="icon-angle-down"></i></a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">MENU SUBITEM 1</a></li>
-                                <li><a href="#">MENU SUBITEM 2</a></li>
+                                <li><a href="#">BEST PET INSURANCE FOR GOLDEN RETRIEVER </a></li>
+                                <li><a href="#">GOLDEN RETRIEVER HEALTH</a></li>
                             </ul>
                         </li>
+                        <!--
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">MENU ITEM 4<i class="icon-angle-down"></i></a>
                             <ul class="dropdown-menu">
@@ -61,6 +67,7 @@
                                 <li><a href="#">MENU SUBITEM 2</a></li>
                             </ul>
                         </li>
+                        -->
                     </ul>        
                 </div>
             </div>
@@ -68,14 +75,15 @@
     </header>
     <!-- /header -->
 
-    <section id="firstsection" style="margin-top: 100px;">
+    <section id="firstsection" style="margin-top: 80px; margin-bottom: 0px;">
         <div class="container">
-            <i style="font-family: Arial, Helvetica, sans-serif; font-size: 20px; color: #4EA3C8; margin-top: 200px'">Making Vet Care Accessible</i>
+            <i style="font-family: Arial, Helvetica, sans-serif; font-size: 20px; color: #4EA3C8; margin-top: 100px; margin-bottom: 50px'">
+                Making Vet Care Accessible</i>
         </div>
     </section>
 
         <!--Slider-->
-    <section id="slide-show">
+    <section id="slide-show" style="margin-top: 0px;">
         <div id="slider" class="sl-slider-wrapper">
             <!--Slider Items-->    
             <div class="sl-slider">
@@ -154,11 +162,15 @@
             <div class="row-fluid">
                 <!--header1 Info-->
                 <div id="header1" class="span4">
-                    <h4>HEADER 1</h4>
+                    <h4>CONTACT US</h4>
                     <div>
                         <ul class="arrow">
-                            <li><a href="#">Link 1.1</a></li>
-                            <li><a href="#">Link 1.2</a></li>
+                            2225 East Bayshore Road, Suite 200
+                            <br>Palo Alto, CA 94303
+                            <!--<img class="pull-right" width="50%" style="padding-top: 5%;"  src="images/phone_icon.png" alt="" /> -->
+                                    <p>&nbsp;</p>                        
+                            <p>(877) 738-1838
+                            <br>877-PET1VET</p>
                         </ul>
                     </div>
                 </div>
@@ -166,15 +178,18 @@
                 <!--End header1 Info-->
                 <!--Important Links-->
                 <div id="header2" class="span4">
-                    <h4>HEADER 2</h4>
+                    <h4>COMPANY</h4>
                     <div>
                         <ul class="arrow">
-                            <li><a href="#">Link 2.1</a></li>
-                            <li><a href="#">Link 2.2</a></li>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Privacy Policy</a></li>
+                            <li><a href="#">Terms & Conditions</a></li>
+                            
                         </ul>
                     </div>  
                 </div>
                 <!--Important Links-->
+                    <!--
                 <div id="header3" class="span4">
                     <h4>HEADER 3</h4>
                     <div>
@@ -184,6 +199,7 @@
                         </ul>
                     </div>
                 </div>
+                -->
                 <!--End Links-->
             </div>
             <!--/row-fluid-->
