--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/sl-slide.css">
     <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
-    <link rel="shortcut icon" href="images/title_logo.jpg">
+    <link rel="shortcut icon" href="images/title_logo.png">
 </head>
 
 <body>
@@ -72,15 +72,16 @@
                 </div>
             </div>
         </div>
+        <section id="firstsection">
+            <div class="container">
+                <i style="font-family: Arial, Helvetica, sans-serif; font-size: 20px; color: #4EA3C8; margin-top: 100px; margin-bottom: 50px'">
+                    Making Vet Care Accessible</i>
+            </div>
+        </section>
     </header>
     <!-- /header -->
 
-    <section id="firstsection" style="margin-top: 80px; margin-bottom: 0px;">
-        <div class="container">
-            <i style="font-family: Arial, Helvetica, sans-serif; font-size: 20px; color: #4EA3C8; margin-top: 100px; margin-bottom: 50px'">
-                Making Vet Care Accessible</i>
-        </div>
-    </section>
+    
 
         <!--Slider-->
     <section id="slide-show" style="margin-top: 0px;">
