--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/sl-slide.css">
+    <link rel="stylesheet" href="css/main.css">
     <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     <link rel="shortcut icon" href="images/title_logo.png">
 </head>
@@ -84,7 +84,7 @@
     
 
         <!--Slider-->
-    <section id="slide-show" style="margin-top: 0px;">
+    <section id="slide-show">
         <div id="slider" class="sl-slider-wrapper">
             <!--Slider Items-->    
             <div class="sl-slider">
@@ -92,7 +92,7 @@
                 <div class="sl-slide item1" data-orientation="horizontal" data-slice1-rotation="-25" data-slice2-rotation="-25" data-slice1-scale="2" data-slice2-scale="2">
                     <div class="sl-slide-inner">
                         <div class="container">
-                            <img class="pull-right" width="50%" style="padding-top: 5%;"  src="images/dog2.jpg" alt="" />
+                            <img class="pull-right" width="50%" src="images/dog2.jpg" alt="" />
                             <h2>Best Insurance for Your Dog</h2>
                             <br>
                             <a class="btn btn-large btn-transparent" href="#">Learn More</a>
@@ -104,7 +104,7 @@
                 <div class="sl-slide item2" data-orientation="vertical" data-slice1-rotation="10" data-slice2-rotation="-15" data-slice1-scale="1.5" data-slice2-scale="1.5">
                     <div class="sl-slide-inner">
                         <div class="container">
-                            <img class="pull-right" width="50%"   src="images/cat2.jpg" alt="" />
+                            <img class="pull-right" width="50%" src="images/cat2.jpg" alt="" />
                             <h2>Best Insurance for Your Cat</h2>
                             <br>
                             <a class="btn btn-large btn-transparent" href="#">Learn More</a>
@@ -116,7 +116,7 @@
                 <div class="sl-slide item3" data-orientation="horizontal" data-slice1-rotation="3" data-slice2-rotation="3" data-slice1-scale="2" data-slice2-scale="1">
                     <div class="sl-slide-inner">
                         <div class="container">
-                            <img class="pull-right" width="50%" style="padding-top: 10%;"  src="images/dog_cat2.jpg" alt="" />
+                            <img class="pull-right" width="50%" src="images/dog_cat2.jpg" alt="" />
                             <h2>Pet Insurance that meets your needs</h2>
                             <br>
                             <a class="btn btn-large btn-transparent" href="#">Learn More</a>
